Convert application to bluetooth

--- a/PhoneMouse/app/src/main/AndroidManifest.xml
+++ b/PhoneMouse/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     package="com.example.shrey.phonemouse">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
 
     <application
         android:allowBackup="true"
@@ -11,9 +13,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MouseActivity">
+        <activity android:name=".MouseActivity"
+            android:screenOrientation="portrait">
+
         </activity>
-        <activity android:name=".ConnectionActivity">
+        <activity android:name=".ConnectionActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
